Fixes the link being wider than the image if the browser window is expanded. In order to just have the link wrap the intrinsic value of the image, switch img-responsive to inline block

--- a/app/assets/stylesheets/sufia/_file-show.scss
+++ b/app/assets/stylesheets/sufia/_file-show.scss
@@ -22,3 +22,7 @@
   -webkit-column-width: 20em;
   column-width: 20em;
 }
+
+.img-responsive, figure {
+  display: inline-block;
+}
